// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomUrlEditor renders the editor for a dashboard type URL with a label 1`] = `
<React.Fragment>
  <EuiTitle
    size="xs"
  >
    <h4>
      Create new custom URL
    </h4>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiForm
    className="ml-edit-url-form"
  >
    <EuiFormRow
      className="url-label"
      compressed={true}
      describedByIds={Array []}
      error={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      label="Label"
    >
      <EuiFieldText
        compressed={true}
        fullWidth={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        value="Open Dashboard 1"
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Link to"
    >
      <EuiRadioGroup
        className="url-link-to-radio"
        idSelected="KIBANA_DASHBOARD"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "KIBANA_DASHBOARD",
              "label": "Kibana dashboard",
            },
            Object {
              "id": "KIBANA_DISCOVER",
              "label": "Discover",
            },
            Object {
              "id": "OTHER",
              "label": "Other",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Dashboard name"
    >
      <EuiSelect
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Dashboard 1",
              "value": "dash1",
            },
            Object {
              "text": "Dashboard 2",
              "value": "dash2",
            },
          ]
        }
        value="dash1"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Query entities"
    >
      <EuiComboBox
        fullWidth={false}
        isClearable={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "airline",
            },
          ]
        }
        placeholder="Select entities"
        selectedOptions={Array []}
        singleSelection={false}
      />
    </EuiFormRow>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiFormRow
          className="url-time-range"
          compressed={true}
          describedByIds={Array []}
          fullWidth={false}
          hasEmptyLabelSpace={false}
          label="Time range"
        >
          <EuiSelect
            compressed={true}
            fullWidth={false}
            hasNoInitialSelection={false}
            isLoading={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "auto",
                  "value": "auto",
                },
                Object {
                  "text": "interval",
                  "value": "interval",
                },
              ]
            }
            value="auto"
          />
        </EuiFormRow>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiForm>
</React.Fragment>
`;

exports[`CustomUrlEditor renders the editor for a discover type URL with an entity and empty time range interval 1`] = `
<React.Fragment>
  <EuiTitle
    size="xs"
  >
    <h4>
      Create new custom URL
    </h4>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiForm
    className="ml-edit-url-form"
  >
    <EuiFormRow
      className="url-label"
      compressed={true}
      describedByIds={Array []}
      error={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      label="Label"
    >
      <EuiFieldText
        compressed={true}
        fullWidth={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        value="Open Discover"
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Link to"
    >
      <EuiRadioGroup
        className="url-link-to-radio"
        idSelected="KIBANA_DISCOVER"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "KIBANA_DASHBOARD",
              "label": "Kibana dashboard",
            },
            Object {
              "id": "KIBANA_DISCOVER",
              "label": "Discover",
            },
            Object {
              "id": "OTHER",
              "label": "Other",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Index pattern"
    >
      <EuiSelect
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Index Pattern 1",
              "value": "pattern1",
            },
            Object {
              "text": "Index Pattern 2",
              "value": "pattern2",
            },
          ]
        }
        value="pattern1"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Query entities"
    >
      <EuiComboBox
        fullWidth={false}
        isClearable={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "airline",
            },
          ]
        }
        placeholder="Select entities"
        selectedOptions={
          Array [
            Object {
              "label": "airline",
            },
          ]
        }
        singleSelection={false}
      />
    </EuiFormRow>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiFormRow
          className="url-time-range"
          compressed={true}
          describedByIds={Array []}
          fullWidth={false}
          hasEmptyLabelSpace={false}
          label="Time range"
        >
          <EuiSelect
            compressed={true}
            fullWidth={false}
            hasNoInitialSelection={false}
            isLoading={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "auto",
                  "value": "auto",
                },
                Object {
                  "text": "interval",
                  "value": "interval",
                },
              ]
            }
            value="interval"
          />
        </EuiFormRow>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <EuiFormRow
          className="url-time-range"
          compressed={true}
          describedByIds={Array []}
          error={
            Array [
              "Invalid interval format",
            ]
          }
          fullWidth={false}
          hasEmptyLabelSpace={false}
          isInvalid={true}
          label="Interval"
        >
          <EuiFieldText
            compressed={true}
            fullWidth={false}
            isInvalid={true}
            isLoading={false}
            onChange={[Function]}
            value=""
          />
        </EuiFormRow>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiForm>
</React.Fragment>
`;

exports[`CustomUrlEditor renders the editor for a discover type URL with valid time range interval 1`] = `
<React.Fragment>
  <EuiTitle
    size="xs"
  >
    <h4>
      Create new custom URL
    </h4>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiForm
    className="ml-edit-url-form"
  >
    <EuiFormRow
      className="url-label"
      compressed={true}
      describedByIds={Array []}
      error={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      label="Label"
    >
      <EuiFieldText
        compressed={true}
        fullWidth={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        value="Open Discover"
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Link to"
    >
      <EuiRadioGroup
        className="url-link-to-radio"
        idSelected="KIBANA_DISCOVER"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "KIBANA_DASHBOARD",
              "label": "Kibana dashboard",
            },
            Object {
              "id": "KIBANA_DISCOVER",
              "label": "Discover",
            },
            Object {
              "id": "OTHER",
              "label": "Other",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Index pattern"
    >
      <EuiSelect
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Index Pattern 1",
              "value": "pattern1",
            },
            Object {
              "text": "Index Pattern 2",
              "value": "pattern2",
            },
          ]
        }
        value="pattern1"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Query entities"
    >
      <EuiComboBox
        fullWidth={false}
        isClearable={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "airline",
            },
          ]
        }
        placeholder="Select entities"
        selectedOptions={
          Array [
            Object {
              "label": "airline",
            },
          ]
        }
        singleSelection={false}
      />
    </EuiFormRow>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiFormRow
          className="url-time-range"
          compressed={true}
          describedByIds={Array []}
          fullWidth={false}
          hasEmptyLabelSpace={false}
          label="Time range"
        >
          <EuiSelect
            compressed={true}
            fullWidth={false}
            hasNoInitialSelection={false}
            isLoading={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "auto",
                  "value": "auto",
                },
                Object {
                  "text": "interval",
                  "value": "interval",
                },
              ]
            }
            value="interval"
          />
        </EuiFormRow>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <EuiFormRow
          className="url-time-range"
          compressed={true}
          describedByIds={Array []}
          error={Array []}
          fullWidth={false}
          hasEmptyLabelSpace={false}
          isInvalid={false}
          label="Interval"
        >
          <EuiFieldText
            compressed={true}
            fullWidth={false}
            isInvalid={false}
            isLoading={false}
            onChange={[Function]}
            value="1h"
          />
        </EuiFormRow>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiForm>
</React.Fragment>
`;

exports[`CustomUrlEditor renders the editor for a new dashboard type URL with no label 1`] = `
<React.Fragment>
  <EuiTitle
    size="xs"
  >
    <h4>
      Create new custom URL
    </h4>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiForm
    className="ml-edit-url-form"
  >
    <EuiFormRow
      className="url-label"
      compressed={true}
      describedByIds={Array []}
      error={
        Array [
          "A unique label must be supplied",
        ]
      }
      fullWidth={false}
      hasEmptyLabelSpace={false}
      isInvalid={true}
      label="Label"
    >
      <EuiFieldText
        compressed={true}
        fullWidth={false}
        isInvalid={true}
        isLoading={false}
        onChange={[Function]}
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Link to"
    >
      <EuiRadioGroup
        className="url-link-to-radio"
        idSelected="KIBANA_DASHBOARD"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "KIBANA_DASHBOARD",
              "label": "Kibana dashboard",
            },
            Object {
              "id": "KIBANA_DISCOVER",
              "label": "Discover",
            },
            Object {
              "id": "OTHER",
              "label": "Other",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Dashboard name"
    >
      <EuiSelect
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Dashboard 1",
              "value": "dash1",
            },
            Object {
              "text": "Dashboard 2",
              "value": "dash2",
            },
          ]
        }
        value="dash1"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Query entities"
    >
      <EuiComboBox
        fullWidth={false}
        isClearable={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "airline",
            },
          ]
        }
        placeholder="Select entities"
        selectedOptions={Array []}
        singleSelection={false}
      />
    </EuiFormRow>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiFormRow
          className="url-time-range"
          compressed={true}
          describedByIds={Array []}
          fullWidth={false}
          hasEmptyLabelSpace={false}
          label="Time range"
        >
          <EuiSelect
            compressed={true}
            fullWidth={false}
            hasNoInitialSelection={false}
            isLoading={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "auto",
                  "value": "auto",
                },
                Object {
                  "text": "interval",
                  "value": "interval",
                },
              ]
            }
            value="auto"
          />
        </EuiFormRow>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiForm>
</React.Fragment>
`;

exports[`CustomUrlEditor renders the editor for other type of URL with duplicate label 1`] = `
<React.Fragment>
  <EuiTitle
    size="xs"
  >
    <h4>
      Create new custom URL
    </h4>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiForm
    className="ml-edit-url-form"
  >
    <EuiFormRow
      className="url-label"
      compressed={true}
      describedByIds={Array []}
      error={
        Array [
          "A unique label must be supplied",
        ]
      }
      fullWidth={false}
      hasEmptyLabelSpace={false}
      isInvalid={true}
      label="Label"
    >
      <EuiFieldText
        compressed={true}
        fullWidth={false}
        isInvalid={true}
        isLoading={false}
        onChange={[Function]}
        value="Show airline"
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Link to"
    >
      <EuiRadioGroup
        className="url-link-to-radio"
        idSelected="OTHER"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "KIBANA_DASHBOARD",
              "label": "Kibana dashboard",
            },
            Object {
              "id": "KIBANA_DISCOVER",
              "label": "Discover",
            },
            Object {
              "id": "OTHER",
              "label": "Other",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={true}
      hasEmptyLabelSpace={false}
      label="URL"
    >
      <EuiTextArea
        compressed={true}
        fullWidth={true}
        onChange={[Function]}
        resize="vertical"
        rows={2}
        value="https://www.google.co.uk/search?q=airline+code+$airline$"
      />
    </EuiFormRow>
  </EuiForm>
</React.Fragment>
`;

exports[`CustomUrlEditor renders the editor for other type of URL with unique label 1`] = `
<React.Fragment>
  <EuiTitle
    size="xs"
  >
    <h4>
      Create new custom URL
    </h4>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiForm
    className="ml-edit-url-form"
  >
    <EuiFormRow
      className="url-label"
      compressed={true}
      describedByIds={Array []}
      error={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      label="Label"
    >
      <EuiFieldText
        compressed={true}
        fullWidth={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        value="View airline"
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      label="Link to"
    >
      <EuiRadioGroup
        className="url-link-to-radio"
        idSelected="OTHER"
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "KIBANA_DASHBOARD",
              "label": "Kibana dashboard",
            },
            Object {
              "id": "KIBANA_DISCOVER",
              "label": "Discover",
            },
            Object {
              "id": "OTHER",
              "label": "Other",
            },
          ]
        }
      />
    </EuiFormRow>
    <EuiFormRow
      compressed={true}
      describedByIds={Array []}
      fullWidth={true}
      hasEmptyLabelSpace={false}
      label="URL"
    >
      <EuiTextArea
        compressed={true}
        fullWidth={true}
        onChange={[Function]}
        resize="vertical"
        rows={2}
        value="https://www.google.co.uk/search?q=airline+code+$airline$"
      />
    </EuiFormRow>
  </EuiForm>
</React.Fragment>
`;
